# h5py-stubs

./: LICENSE  README.md  pyproject.toml
h5py/: _objects.pyi  _selector.pyi  h5.pyi  h5r.pyi  h5s.pyi  h5t.pyi  h5z.pyi  version.pyi
h5py-stubs/: __init__.pyi  _conv.pyi  _locks.pyi  _objects.pyi  _selector.pyi  h5.pyi  h5a.pyi  h5ac.pyi  h5d.pyi  h5ds.pyi  h5f.pyi  h5fd.pyi  h5g.pyi  h5i.pyi  h5l.pyi  h5o.pyi  h5p.pyi  h5pl.pyi  h5py_warnings.pyi  h5r.pyi  h5s.pyi  h5t.pyi  h5z.pyi  utils.pyi  version.pyi
h5py-stubs/_hl/: __init__.pyi  attrs.pyi  base.pyi  compat.pyi  dataset.pyi  datatype.pyi  dims.pyi  files.pyi  filters.pyi  group.pyi  selections.pyi  selections2.pyi  vds.pyi
h5py-stubs/tests/: __init__.pyi
h5py/_hl/: attrs.pyi  base.pyi  dataset.pyi  datatype.pyi  dims.pyi  files.pyi  group.pyi
