[project]
name = "h5py-stubs"
version = "0.1.1"
description = "Type stubs for h5py."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["h5py>=3.12.1", "optype>=0.6.1"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["./h5py-stubs/"]


[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A001",
    "A002",
    "ANN101",
    "ANN102",
    "COM812",
    "FBT001",
    "FBT002",
    "D203",
    "D213",
    "ISC001",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "S101",
    "TD003",
    "N801",
]

[tool.pyright]
include = ["h5py-stubs"]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "strict"
exclude = [".venv"]
ignore = [".venv"]
venvPath = "."
venv = ".venv"
stubPath = "."

reportDeprecated = true
reportMissingParameterType = true
reportMissingTypeArgument = true
reportUnknownArgumentType = true
reportUnknownParameterType = true
reportUnknownVariableType = true
deprecateTypingAliases = true
enableTypeIgnoreComments = false
reportIgnoreCommentWithoutRule = true
reportImplicitRelativeImport = true
reportInvalidCast = true
reportPrivateUsage = false
reportUnnecessaryTypeIgnoreComment = true
reportUnsafeMultipleInheritance = true


[tool.mypy]
python_version = "3.10"
disable_bytearray_promotion = true
disable_memoryview_promotion = true
disallow_any_explicit = false
disallow_untyped_defs = false       # TODO
disallow_incomplete_defs = false    # TODO
warn_unused_ignores = true
